# wiz-lights-rs

./: .gitignore  Cargo.toml
src/: lib.rs
src/bulb/: mod.rs  response.rs  sourced_response.rs
src/bulb/method/: get_methods.rs  mod.rs  set_methods.rs
src/function/: mod.rs
src/registry/: bulb.rs  group.rs  mod.rs  surreal.rs
src/utils/: mod.rs
