[package]
name = "wiz-bulb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstest = "0.18.2"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive", "std"] }
surrealdb = { version = "1.1.1", features = ["kv-mem"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.79"
erased-serde = "0.4.5"
typetag = "0.2.16"
url = "2.5.0"
log = "0.4.21"
anyhow = "1.0.86"
